# Animalia

./: .breakpoints  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  rating.py  run.sh
chatapp/: main.py
static/css/: play.css  styles.css
templates/: index.html  nav.html  play.html
webapp/: app.py  db.py  questions.py
webapp/static/css/: play.css  styles.css
webapp/static/js/: infinitescroll.js  play.js
webapp/templates/: index.html  leaderboard.html  play.html  profile.html
websocketapp/: main.py  questions.py  rating.py  util.py
