[tool.poetry]
name = "repl_python3_simplihacks"
version = "0.1.0"
description = ""
authors = ["EthanHo1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
psycopg2-binary = "^2.9.3"
Flask-Login = "^0.6.1"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
